examples/java/failing/left_right_class/Expected.java
class MyCls {
        int a;
        String b;
        boolean c;
        char d;
}
